@@ -1,93 +1,51 @@
 plugins {
-    id 'uk.gov.hmcts.java' version '0.12.0'
+    id 'org.owasp.dependencycheck' version '8.3.1'
     id 'scala'
-    id 'com.github.lkishalmi.gatling' version '3.0.2'
-//    id 'java-gradle-plugin'
-    id 'groovy'
-    id 'com.gradle.plugin-publish' version '0.12.0'
-    id 'maven-publish'
-    id 'org.owasp.dependencycheck' version '8.0.2'
+    id 'java-library'
+    id 'io.gatling.gradle' version '3.9.5'
 }
 
-//apply plugin: 'java'
-apply plugin: 'scala'
-group 'uk.gov.hmcts.reform'
-version = '1.0'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 tasks.withType(JavaExec) {
-    jvmArgs = ['-Xms512m', '-Xmx1024m', '-XX:+UseConcMarkSweepGC']
+    // Configure the size of the JVM if necessary
+    jvmArgs = ['-Xms1024m', '-Xmx2048m']
+    /* Use the following args to build a report when a test was terminated
+    args = [
+        "--reports-only", "fact-20201109092032896",
+        '--results-folder', file('build/reports/gatling').absolutePath,
+        ]
+    */
 }
 
-sourceCompatibility = "11"
-targetCompatibility = "11"
-
-/*dependencyCheck {	
-    suppressionFile = 'config/owasp/suppressions.xml'
-}*/
+tasks.withType(Copy).all{
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
-//jar {
-//    manifest {
-//        attributes 'Implementation-Title': 'EXUI Performance Tests',
-//                'Implementation-Version': version
-//    }
-//}
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'io.gatling.app.Gatling'
-    }
-    from {
-        configurations.testCompile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    from sourceSets.test.output
-    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
-}
-
-/*dependencyCheck {
-    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-    // range of 0-10 fails the build, anything greater and it doesn't fail the build
-    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
-    suppressionFile = 'dependency-check-suppressions.xml'
-}*/
-
-repositories {
-    jcenter()
-}
-
-dependencies {
-    //compile 'org.scala-lang:scala-library:2.12.8'
-    gatlingCompile 'com.warrenstrange:googleauth:1.1.5'
-    //compile group: 'io.gatling', name: 'gatling-app', version: '3.1.1'
-    //compile group: 'io.gatling', name: 'gatling-recorder', version: '3.1.1'
-    //compile group: 'io.gatling.highcharts', name: 'gatling-charts-highcharts', version: '3.1.1'
-    //gatlingCompile group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.14.1-RELEASE'
-}
 
 gatling {
-    toolVersion '3.1.1'
-    scalaVersion '2.12.8'
-    simulations = [ 'uk.gov.hmcts.reform.role_assignment.performance.simulations.RoleAssignmentSimulation'
-    ]
-}
-
-
-test {
-    testLogging {
-        showStandardStreams = true
+    gatlingVersion '3.9.5'
+    scalaVersion '2.13.10'
+    simulations = {
+        include  "simulations/RoleAssignmentSimulation.scala"
     }
-    dependsOn("publishToMavenLocal")
-    systemProperty "com.github.lkishalmi.gatling.version", project.version
 }
 
-pluginBundle {
-    website = 'https://github.com/lkishalmi/gradle-gatling-plugin'
-    vcsUrl = 'https://github.com/lkishalmi/gradle-gatling-plugin'
-    description = 'Gatling Simulation Execution'
-    tags = ['gatling', 'load test', 'stress test', 'performance test', 'scala']
+sourceSets {
+    gatling {
+        scala {
+            srcDir 'src/gatling/simulations'
+        }
+        resources {
+            srcDir 'src/gatling/resources'
+        }
+    }
 }
-
-ext ['netty.version'] = '4.0.51.Final'
